data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1729.wast
;; 10. **Uninitialized Label Access**:     - **Description**: Create a scenario where `br_if` attempts to reference a label in a context where no labels have been initialized.     - **Constraint**: Initialization and label setup.     - **CFG Impact**: Branch to an uninitialized label breaks the CFG assumptions, leading to broken control paths.

(assert_invalid
  (module (func (br_if 0 (i32.const 1))))
  "unknown label"
)